mongodb-express/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deploy
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      name: mongodb-pods
      labels:  
        app: mongodb   
    spec:
      containers:
        - name: mongodb
          image: mongo 
          ports:
            - containerPort: 27017
