mongodb-express/mongoexpress-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysite-ingress
  namespace: default
spec:
  rules:
    - host: mysite.com
      http:
        paths:
          - path: /
            backend:
              serviceName: mongo-express-service
              servicePort: 8081
